--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <header class="container">
+      <div class="logo">
+        <img src="resources/images/img-tea-cozy-logo.png" />
+      </div>
+      <nav>
+        <span class="link"><a href="#mission">Mission</a></span>
+        <span class="link"><a href="#featured">Featured Tea</a></span>
+        <span class="link"><a href="#locations">Locations</a></span>
+      </nav>
+    </header>
   </body>
 </html>
