--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!-- Header -->
     <header class="container">
       <div class="logo">
         <img src="resources/images/img-tea-cozy-logo.png" />
@@ -16,5 +17,65 @@
         <span class="link"><a href="#locations">Locations</a></span>
       </nav>
     </header>
+    <div class="main">
+      <!-- Mission Banner -->
+      <div id="mission" class="container" >
+        <div class="banner">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+      <!-- Specials Section -->
+      <div id="featured">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="container specials">
+          <div class="special">
+            <img src="resources/images/img-berryblitz.jpg" />
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="special">
+            <img src="resources/images/img-spiced-rum.jpg" />
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="special">
+            <img src="resources/images/img-donut.jpg" />
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="special">
+            <img src="resources/images/img-myrtle-ave.jpg" />
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="special">
+            <img src="resources/images/img-bedford-bizarre.jpg" />
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </div>
+      </div>
+      <!-- Location Section -->
+      <div id="locations">
+        <h2>Locations</h2>
+        <div class="container locations">
+          <div class="location">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="location">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="location">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
