--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <!-- Header -->
+    <!-- Header Section -->
     <header class="container">
       <div class="logo">
         <img src="resources/images/img-tea-cozy-logo.png" />
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <div class="main">
-      <!-- Mission Banner -->
+      <!-- Mission Section -->
       <div id="mission" class="container" >
         <div class="banner">
           <h2>Our Mission</h2>
@@ -83,6 +83,7 @@
         <h5>917-555-8904</h5>
       </div>
     </div>
+    <!-- Footer Section -->
     <footer>
       <div class="copyright">
         <h5>copyright The Tea Cozy 2017</h5>
